Fixed Overflow Basins going down to Output Window

--- a/public/css/accordion.css
+++ b/public/css/accordion.css
@@ -3,7 +3,7 @@ ul#accordion{
 	list-style-type: none;
 	margin-right:10px;
 	color:black;
-	
+	width:4000px;
 	
 
 }
